--- a/Ames Housing Project - Workbook - JM.ipynb
+++ b/Ames Housing Project - Workbook - JM.ipynb
@@ -2854,8 +2854,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In general, this was a fun project to complete. While at first, it was somewhat time consuming being able to get the regression models to work, it was fun to work through the data engineering and working with moving the dataset around. Even though this was my first actual data science problem, especially my first time working through a project involving regression, I am quite proud of the result of the project. I would have liked to have a bigger dataset so that I could engineer more columns that I thought were valuable, or make my columns more solid. For example in my train dataset, I created a column that categorized houses by average cost of houses in those neighborhoods. However there are certain neighborhoods that have less than 10 houses, so the average cost per house in those neighborhoods are not a great representation of the actual average, so more data in those neighborhoods would solidify the accuracy of my model to future data. "
+    "In general, this was a fun project to complete. While at first, it was somewhat time consuming being able to get the regression models to work, it was fun to work through the data engineering and working with moving the dataset around. Even though this was my first actual data science problem, especially my first time working through a project involving regression, I am quite proud of the result of the project. I would have liked to have a bigger dataset so that I could engineer more columns that I thought were valuable, or make my columns more solid. For example in my train dataset, I created a column that categorized houses by average cost of houses in those neighborhoods. However there are certain neighborhoods that have less than 10 houses, so the average cost per house in those neighborhoods are not a great representation of the actual average, so more data in those neighborhoods would solidify the accuracy of my model to future data. \n",
+    "\n",
+    "I would like to rivisit this project in the future and try to improve my model with other machine learning models to be able to compare."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2874,7 +2883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
